# elec_clock

./: elec_clock_local.code-workspace  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
assets/: Emoji_Fish.json  Emoji_StaticFish.json
components/espressif__esp-box/: .component_hash  esp-box.c  idf_component.yml
components/espressif__icm42670/: icm42670.c  idf_component.yml
components/espressif__icm42670/include/: icm42670.h
components/tinygl/: CMakeLists.txt  idf_component.yml
components/tinygl/tinyGL/: api.c  arrays.c  clear.c  clip.c  error.c  get.c  gl.h  glu.c  glu.h  image_util.c  init.c  light.c  list.c  matrix.c  memory.c  misc.c  msghandling.c  msghandling.h  opinfo.h  oscontext.c  oscontext.h  select.c  specbuf.c  specbuf.h  texture.c  vertex.c  zgl.h  (+10 more)
main/: CMakeLists.txt  idf_component.yml  main.c  mmap_generate_assets.h
main/app/: app_imu.c  app_imu.h  app_weather.c  app_weather.h  app_wifi.c  app_wifi.h  thorvg_display.c
main/cube_dice/: cube_dice.c  cube_dice.h
main/game_2048/: lv_100ask_2048.c  lv_100ask_2048.h  simple_test.c  simple_test.h
main/lottie_player/: lottie_player.c  lottie_player.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_panel2.c  ui_comp_panel2.h
main/ui/fonts/: ui_font_OPPOSansH18.c  ui_font_OPPOSansH25.c
main/ui/images/: ui_img_wifi_disconnection_png.c
main/ui/screens/: ui_dice.c  ui_face.c  ui_fish.c  ui_game.c  ui_home.c  ui_muyuplay.c  ui_shaiziplay.c  ui_title.c
(+2 files in other folders)
